2004-06-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/anim/minibutton.png: added, created by bruno.
	* src/boards/python/anim.py: added an anim control area. implemented a frame counter display.

2004-06-20  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/gcompris-edit.c: (main): fixed (gcompris_edit was not working anymore for a while)
	* src/gcompris/interface.c: (create_gcompris_edit): fixed the path to the desktop icon


	RELEASED 6.1

2004-06-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: added config.h.windows
	* README.mingw: added more specific informations
	* README.windows: fixed project link
	* config.h.windows: create. use it to compile on mingw
	* configure.in: changed to release 6.1
	* src/boards/Makefile.am: added boards2static.pl utility for mingw
	* src/gcompris/assetml.c: (assetml_get_locale): replaced getenv by g_getenv
	* src/gcompris/board.c: (init_plugins), (board_check_file): merged mingw version and linux version
	* src/gcompris/gameutil.c: (gcompris_read_xml_file),
	(gcompris_load_menus): fixed bugs in which you cannot go back to upper menu if you enter
	the configuration dialog while you are in a submenu.
	* src/gcompris/gcompris-board.h: reindent
	* src/gcompris/gcompris.c: (setup_window), (gcompris_init): implemented the grace period stuff for
	mingw

2004-06-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/boards2static.pl: created. Allow to transform the boards to static notation used in the
	windows version.
	* src/boards/clockgame.c: -A- added missing static => fails on windows
	* src/boards/draw.c: -A-
	* src/boards/python/anim.py: Fixed coord system by Yves Combe
	* src/boards/reversecount.c: -A-
	* src/boards/shapegame.c: -A-
	* THANKS: Updated. It was very needed.

2004-06-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* .cvsignore:
	* Makefile.am: added README.mingw
	* README.mingw: copyed from a mingw ported program. can find back which. Not adapted to gcompris